// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput tests renders on android 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 15,
        "marginTop": 3,
      }
    }
  >
    test custom text input
  </Text>,
  <TextInput
    allowFontScaling={true}
    blurOnSubmit={true}
    maxLength={255}
    multiline={true}
    onChangeText={[Function]}
    onContentSizeChange={[Function]}
    onSubmitEditing={[Function]}
    placeholder="custom text input placeholder"
    rejectResponderTermination={true}
    returnKeyType="done"
    style={
      Array [
        Object {
          "backgroundColor": "#efefef",
          "borderColor": "gray",
          "borderRadius": 4,
          "borderWidth": 1,
          "minHeight": "8%",
          "paddingHorizontal": 15,
          "paddingVertical": 15,
        },
        Object {},
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />,
]
`;

exports[`CustomTextInput tests renders on ios 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 15,
        "marginTop": 3,
      }
    }
  >
    test custom text input
  </Text>,
  <TextInput
    allowFontScaling={true}
    blurOnSubmit={true}
    maxLength={255}
    multiline={true}
    onChangeText={[Function]}
    onContentSizeChange={[Function]}
    onSubmitEditing={[Function]}
    placeholder="custom text input placeholder"
    rejectResponderTermination={true}
    returnKeyType="done"
    style={
      Array [
        Object {
          "backgroundColor": "#efefef",
          "borderColor": "gray",
          "borderRadius": 4,
          "borderWidth": 1,
          "minHeight": "8%",
          "paddingHorizontal": 15,
          "paddingVertical": 15,
        },
        Object {
          "paddingTop": 15,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />,
]
`;
